--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <wls.username>admin</wls.username>
+        <pw>admin1234</pw>
     </properties>
 
     <dependencies>
@@ -47,7 +48,8 @@
                 <configuration>
                     <middlewareHome>/Users/isc75529/appservers/fmw_12.2.1.3.0_wls_quick_Disk1_1of1/wls12213
                     </middlewareHome>
-                    <user>${wls.username}</user>
+                    <adminurl>t3://localhost:7001</adminurl>
+                    <user>admin</user>
                     <password>admin1234</password>
                     <name>jms</name>
                 </configuration>
@@ -76,9 +78,8 @@
                             <goal>list-apps</goal>
                         </goals>
                         <configuration>
-                            <adminurl>t3://localhost:7001</adminurl>
 <!--                            <user>admin</user>-->
-                            <password>admin1234</password>
+<!--                            <password>admin1234</password>-->
                         </configuration>
                     </execution>
                     <execution>
