--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,11 @@
                 <artifactId>weblogic-maven-plugin</artifactId>
                 <version>12.2.1-3-0</version>
                 <configuration>
-                    <middlewareHome>/Users/isc75529/appservers/fmw_12.2.1.3.0_wls_quick_Disk1_1of1/wls12213
-                    </middlewareHome>
+                    <middlewareHome>/Users/isc75529/appservers/fmw_12.2.1.3.0_wls_quick_Disk1_1of1/wls12213</middlewareHome>
                     <adminurl>t3://localhost:7001</adminurl>
                     <user>admin</user>
                     <password>admin1234</password>
-                    <name>jms</name>
+                    <name>${project.build.finalName}</name>
                 </configuration>
                 <executions>
                     <execution>
@@ -61,13 +60,9 @@
                             <goal>deploy</goal>
                         </goals>
                         <configuration>
-                            <adminurl>t3://localhost:7001</adminurl>
-                            <user>admin</user>
-                            <password>admin1234</password>
                             <source>${project.build.directory}/${project.build.finalName}.${project.packaging}</source>
                             <targets>myserver</targets>
                             <verbose>true</verbose>
-                            <name>${project.build.finalName}</name>
                         </configuration>
                     </execution>
                     <!-- Stop the application in the pre-integration-test phase -->
@@ -77,10 +72,6 @@
                         <goals>
                             <goal>list-apps</goal>
                         </goals>
-                        <configuration>
-<!--                            <user>admin</user>-->
-<!--                            <password>admin1234</password>-->
-                        </configuration>
                     </execution>
                     <execution>
                         <id>wls-undeploy</id>
@@ -88,12 +79,6 @@
                         <goals>
                             <goal>undeploy</goal>
                         </goals>
-                        <configuration>
-                            <adminurl>t3://localhost:7001</adminurl>
-                            <user>admin</user>
-                            <password>admin1234</password>
-                            <name>jms</name>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
