--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
             <artifactId>quartz</artifactId>
             <version>2.3.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -46,7 +45,7 @@
                 <artifactId>weblogic-maven-plugin</artifactId>
                 <version>12.2.1-3-0</version>
                 <configuration>
-                    <middlewareHome>/Users/isc75529/appservers/fmw_12.2.1.3.0_wls_quick_Disk1_1of1/wls12213</middlewareHome>
+                    <middlewareHome>~/appservers/fmw_12.2.1.3.0_wls_quick_Disk1_1of1/wls12213</middlewareHome>
                     <adminurl>t3://localhost:7001</adminurl>
                     <user>admin</user>
                     <password>admin1234</password>
@@ -84,6 +83,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
